--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,4 @@ envlist =
 deps =
     django19: Django >= 1.9, < 1.10
     django110: Django >= 1.10, < 1.11
-commands = python setup.py test
-
-[flake8]
-max-line-length = 120
+commands = python setup.py testenv
