Typo in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,4 @@ envlist =
 deps =
     django19: Django >= 1.9, < 1.10
     django110: Django >= 1.10, < 1.11
-commands = python setup.py testenv
+commands = python setup.py test
